--- a/app/views/reviews/_comment.html.erb
+++ b/app/views/reviews/_comment.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h4>Comment by <%= comment.object.user.firstname_and_lastname %></h4>
-  <p><%= comment.object.body %></p>
+  <h4>Comment by <%= comment.user.firstname_and_lastname %></h4>
+  <p><%= comment.body %></p>
 </div>
