--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -24,12 +24,12 @@
           <div class="input-field col m6">
             <i class="material-icons prefix">perm_contact_calendar</i>
             <%= f.label :start_time%>
-             <%= f.date_field :start_date, class: "datepicker", placeholder: "Start Date", required: true, :required => true %>
+             <%= f.date_field :start_date, class: "datepicker start_date", placeholder: "Start Date", required: true, :required => true %>
           </div>
           <div class="input-field col m6">
             <i class="material-icons prefix">perm_contact_calendar</i>
             <%= f.label :end_time%>
-             <%= f.date_field :end_date, class: "datepicker", placeholder: "End Date", required: true, :required => true %>
+             <%= f.date_field :end_date, class: "datepicker end_date", placeholder: "End Date", required: true, :required => true %>
           </div>
         </div>
         <div class="row">
@@ -60,19 +60,19 @@
         </div>
         <div class="row">
           <div class="col m6">
-             <input name="task[type]" type="radio" id="test1" value="broadcast" required />
-              <label for="test1">Broadcast tis task for bidding</label>
+             <input name="task[type]" type="radio" id="broadcast" value="broadcast" required />
+              <label for="broadcast">Broadcast tis task for bidding</label>
           </div>
           <div class="col m6">
 
-            <input name="task[type]" type="radio" id="test2" value="assign" />
-             <label for="test2">Assign This task to a taskee</label>
+            <input name="task[type]" type="radio" id="assign" value="assign" />
+             <label for="assign">Assign This task to a taskee</label>
           </div>
         </div>
         <div class="row">
           <div class="text-center" style="text-align: center">
             <!-- <%= f.submit "Create Task", class: "btn waves-effect waves-light"%> -->
-            <button class="btn waves-effect waves-light" type="submit">Submit
+            <button class="btn waves-effect waves-light" type="submit">Create Task
               <i class="material-icons right">send</i>
             </button>
           </div>
