chore(task creation): remove sidebar from task creation page

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,5 @@
 <main>
-  <div class="col m4">
-    <%= render "partials/sidebar_dashboard" %>
-  </div>
-  <div class="container col m8">
+  <div class="container">
     <div class="container">
     <h3>Create New task</h3>
     <div class="col m12">
