feat (views): implement the functionality to respond to reviews

--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -12,6 +12,7 @@
       <% end %>
       <%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %><hr>
       <%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %><hr>
+      <%= link_to raw("<li class='side-nav-button'>Reviews</li>"), reviews_path %><hr>
     </ul>
   </div>
 </main>
