--- a/app/views/reviews/_feedback.html.erb
+++ b/app/views/reviews/_feedback.html.erb
@@ -1,3 +1,3 @@
 <p>
-<%= link_to feedback.task_management, review_path(feedback) %> <%= feedback.reviewer.firstname_and_lastname %>
+<%= link_to feedback.task_management.task_desc, review_path(feedback) %> <br><%= feedback.reviewer.firstname_and_lastname %>
 </p>
