--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,1 +1,1 @@
-<p><%= link_to review.task_management, review_path(review) %> <%= review.reviewee.firstname_and_lastname %></p>
+<p><%= link_to review.task_management.task_desc, review_path(review) %> <br><%= review.reviewee.firstname_and_lastname %></p>
