refactor(search for taskee): change search to use skillset instead of task

--- a/app/views/partials/profile_view.html.erb
+++ b/app/views/partials/profile_view.html.erb
@@ -18,7 +18,7 @@
             <% if assign %>
             <%= link_to "ASSIGN TASK", assign_path(taskee_id: @user.id, task_id: task_id), class: "btn waves-effect" %>
             <% else %>
-            <%= link_to "ASSIGN TASK", assign_task_path(obfuscate(id: @user.id)), class: "btn waves-effect" %>
+            <%= link_to "ASSIGN TASK", new_task_path(taskee_id: @user.id), class: "btn waves-effect" %>
             <% end %>
           <% end %>
         </div>
