--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -37,25 +37,30 @@
           </div>
           <div class="input-field col m6">
             <i class="material-icons prefix">my_location</i>
-
+            <% if session[:searcher] %>
+            <input type="text" value="location" disabled />
+            <%= f.hidden_field :taskee_id, value: params[:taskee_id] %>
+            <% else %>
             <label for="location"> Location(street, city) </label>
              <%= f.text_field "location" %>
+             <% end %>
           </div>
         </div>
         <div class="row">
           <div class="input-field col m6">
              <%= f.text_area "description", class: "form-control", placeholder: "Enter the description of the task here", :required => true %>
           </div>
-          <!-- <i class="material-icons prefix">list</i> -->
           <div class="input-field col m5 offset-m1">
-            <!-- <i class="material-icons prefix">list</i> -->
-            <%= f.label :Skillsets%>
-            <!-- <%= f.text_field "skillsets", class: "form-control typeahead", "data-role" => "materialtags" %> -->
-            <input type="text" class="typeahead" name="task[skillsets]" data-ids="task[skillsets]"  data-role="materialtags"/>
-            <input type="hidden", name="skillsetid" value="" id="skillsetid"/>
+          <%= f.label :Skillsets%>
+          <% if session[:searcher] %>
+          <input type="text" value="<%= session[:searcher]%>" disabled />
+          <input type="hidden" name="task[skillsets]" value="<%= session[:searcher]%>" />
+          <% else %>
+            <input type="text" class="typeahead" name="task[skillsets]" id="skillsets"  data-role="materialtags"/>
+            <% end %>
           </div>
-
         </div>
+        <% unless session[:searcher] %>
         <div class="row">
           <div class="col m6">
              <input name="task[type]" type="radio" id="broadcast" value="broadcast" required />
@@ -67,9 +72,9 @@
              <label for="assign">Assign This task to a taskee</label>
           </div>
         </div>
+        <% end %>
         <div class="row">
           <div class="text-center" style="text-align: center">
-            <!-- <%= f.submit "Create Task", class: "btn waves-effect waves-light"%> -->
             <button class="btn waves-effect waves-light" type="submit">Create Task
               <i class="material-icons right">send</i>
             </button>
