--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -34,27 +34,24 @@
                 </div>
             <% end %>
         </section>
-        <div class="col s6">
+        <section class="col s6">
 
           <div class="profile-meter">
             <div class="progress-pie-chart" data-percent="<%= @completion_percentage %>">
-          <div class="ppc-progress">
-            <div class="ppc-progress-fill"></div>
-          </div>
-          <div class="ppc-percents">
-            <div class="pcc-percents-wrapper">
-              <span>%</span>
+              <div class="ppc-progress">
+                <div class="ppc-progress-fill"></div>
+              </div>
+              <div class="ppc-percents">
+                <div class="pcc-percents-wrapper">
+                  <span>%</span>
+                </div>
+              </div>
             </div>
+            <p class="meter-header"><a href="<%= profile_path %>"> Complete Your Profile</a> </p>
+            <br/>
           </div>
-        </div>
-        <p class="meter-header"><a href="<%= profile_path %>"> Complete Your Profile</a> </p>
-
-          <br />
-
-          </div>
-        </div>
-
-    </div>
+        </section>
+      </div>
   </section>
 </main>
 
