Revert " #121209939 - ft taskee and tasker reviews"

--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -53,7 +53,7 @@ nav .nav-wrapper {
 // Dashboard index
 .sidebar-dash {
   position: absolute;
-  height: auto;
+  height: 90%;
   width: 200px;
   float: left;
   background-color: #767373;
