test(controller): ensure all tests are green

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
           <div class="input-field col m6">
-            <i class="material-icons prefix">perm_contact_calendar</i>
+            <i class="material-icons prefix">description</i>
              <%= f.text_area "description", class: "materialize-textarea", placeholder: "Enter the description of the task here", :required => true %>
           </div>
           <div class="input-field col m6">
