test(controllers): add task controller spec

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -181,8 +181,8 @@ textarea {
 }
 
 // Select tag
-select {
-  display: inline-block !important;
-  visibility: visible !important;
-
-}
+// select {
+//   display: inline-block !important;
+//   visibility: visible !important;
+//
+// }
