--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -51,7 +51,7 @@
              <%= f.text_area "description", class: "materialize-textarea", placeholder: "Enter the description of the task here", :required => true %>
           </div>
           <div class="input-field col m6 jiji">
-
+              <%= f.label :choose_your_skillset%>
               <%= f.collection_select :skillset_id, @skillsets, :id, :name%>
           </div>
         </div>
