--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -50,7 +50,8 @@
             <i class="material-icons prefix">description</i>
              <%= f.text_area "description", class: "materialize-textarea", placeholder: "Enter the description of the task here", :required => true %>
           </div>
-          <div class="input-field col m6 jiji">
+          <div class="input-field col m6 push-5 jiji">
+            <i class="material-icons prefix ji">work</i>
               <%= f.label :choose_your_skillset%>
               <%= f.collection_select :skillset_id, @skillsets, :id, :name%>
           </div>
