--- a/app/views/task_managements/show.html.erb
+++ b/app/views/task_managements/show.html.erb
@@ -3,26 +3,41 @@
     <div class="row">
       <ul class= "col m10 offset-m1" >
         <h2>Complete this deal</h2>
-        <p>You can review and/or rate the taskee before you click on " complete" button.</p>
-        <p><strong>NB:</strong> Clicking on the complete button means that the task has been completed by the taskee.</p>
-        <li><strong><%= label_tag "Taskee's name" %></strong><%= text_field_tag("name", params[:taskee], disabled: true) %></li>
-        <li><strong><%= label_tag "Task Description" %></strong><%= text_field_tag("description", params[:task], disabled: true ) %></li>
-        <%= form_tag completed_path do %>
-        <li><strong><%= label_tag "Add a comment about the taskee or their job:" %></strong></li>
-          <input type="hidden" name= "task_id" value= "<%= params[:num] %>" >
-          <input type="hidden" name= "user_id" value= "<%= params[:user_id] %>" >
-        <li><%= text_area_tag "comment" %></li>
-        <li><strong><%= label_tag "Rate taskee" %></strong>
-          <div>&nbsp;</div>
-            <% 1.upto(5) do |n| %>
-              <div class="group">
-                <i class="fa fa-star-o"></i>
-                <input type="radio" name="rating" value="<%= n %>">
-              </div>
+        <p> You will have to pay before your taskee will be notified</p>
+        <p>You may pay below</p>
+        <% if params["task_management"] %>
+          <% @taskee = User.find(params["task_management"]["taskee_id"]).fullname %>
+          <% @description = params["task_management"]["task_desc"] %>
+          <% @amount = params["task_management"]["amount"] %>
+          <li><strong><%= label_tag "Taskee's name" %></strong><%= text_field_tag("name", @taskee, disabled: true) %></li>
+          <li><strong><%= label_tag "Task Description" %></strong><%= text_field_tag("description", @description, disabled: true ) %></li>
+          <% if @task %>
+            <% unless @task.paid? %>
+              <%= render "pay" %>
             <% end %>
-          <div>&nbsp;</div>
-        </li>
-        <li><button class="btn waves-effect" type="submit">Completed</button></li>
+          <% end %>
+        <% else %>
+          <p>You can review and/or rate the taskee before you click on " complete" button.</p>
+          <p><strong>NB:</strong> Clicking on the complete button means that the task has been completed by the taskee.</p>
+          <li><strong><%= label_tag "Taskee's name" %></strong><%= text_field_tag("name", params[:taskee], disabled: true) %></li>
+          <li><strong><%= label_tag "Task Description" %></strong><%= text_field_tag("description", params[:task], disabled: true ) %></li>
+            <%= form_tag completed_path do %>
+            <li><strong><%= label_tag "Add a comment about the taskee or their job:" %></strong></li>
+              <input type="hidden" name= "task_id" value= "<%= params[:num] %>" >
+              <input type="hidden" name= "user_id" value= "<%= params[:user_id] %>" >
+            <li><%= text_area_tag "comment" %></li>
+            <li><strong><%= label_tag "Rate taskee" %></strong>
+              <div>&nbsp;</div>
+                <% 1.upto(5) do |n| %>
+                  <div class="group">
+                    <i class="fa fa-star-o"></i>
+                    <input type="radio" name="rating" value="<%= n %>">
+                  </div>
+                <% end %>
+              <div>&nbsp;</div>
+            </li>
+            <li><button class="btn waves-effect" type="submit">Completed</button></li>
+            <% end %>
         <% end %>
       </ul>
     </div>
