--- a/app/views/task_managements/show.html.erb
+++ b/app/views/task_managements/show.html.erb
@@ -1,11 +1,19 @@
+  <% if flash.present?  %>
+    <% flash.each do | name | %>
+      <div class="flash-mail">
+        <i class="material-icons close-flash">close</i>
+        <p><%= name.last %></p>
+      </div>
+    <% end %>
+  <% end %>
 <main>
   <section class="col m9 s12 offset-m1">
     <div class="row">
       <ul class= "col m10 offset-m1" >
         <h2>Complete this deal</h2>
-        <p> You will have to pay before your taskee will be notified</p>
-        <p>You may pay below</p>
         <% if params["task_management"] %>
+          <p> You will have to pay before your taskee will be notified</p>
+          <p>You may pay below</p>
           <% @taskee = User.find(params["task_management"]["taskee_id"]).fullname %>
           <% @description = params["task_management"]["task_desc"] %>
           <% @amount = params["task_management"]["amount"] %>
