--- a/app/views/references/new.html.erb
+++ b/app/views/references/new.html.erb
@@ -1,4 +1,18 @@
 <%= render 'partials/sidebar_dashboard' %>
 <section class="main container">
-  <%= render 'form' %>
+  <% if @reference.errors.any? %>
+   <div id="error_explanation">
+    <h3><%= pluralize(@bidding.errors.count, "error") %></h3>
+    <ul>
+      <% @bidding.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+   </div>
+  <% end %>
+  <div class="row">
+    <div class="col m12 offset-m1">
+      <%= render 'form' %>
+    </div>
+  </div>
 </section>
