feat(search for posted need): add search box on navbar

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -80,6 +80,40 @@ button.btn[disabled] {
   }
 }
 
+.search-i {
+  cursor: pointer;
+  // font-size: 20px !important;
+  // font-weight: normal !important;
+  // line-height: 65px !important;
+}
+
+.search-icon-span {
+  // display: inline-block;
+  position: relative;
+}
+.search-bar {
+  border-bottom: 2px solid #338574;
+  display: none;
+  height: 3em;
+  width: 100%;
+}
+#search-input {
+  width: 80%;
+}
+#my-input-field {
+  font-size: 1em !important;
+  padding-left: 0 !important;
+}
+.my-input {
+  #my-input-field:focus {
+    border-bottom: 0 solid;
+    box-shadow: 0 0 0 0;
+  }
+}
+.search-container {
+  padding-right: 0 !important;
+}
+
 .flash-mail {
   text-align: center;
   width: 50%;
