ft(taskee references): implement reference view
[#123043311]

--- a/app/assets/stylesheets/styles/_references.scss
+++ b/app/assets/stylesheets/styles/_references.scss
@@ -1,8 +1,17 @@
 #new-reference-btn {
-  margin-bottom: 1.5rem;
-  margin-left: 33rem;
+  bottom: 45px;
 }
 
 #endorsement-collection {
   margin-top: 3rem;
+}
+
+.bottom-secondary-content {
+  position: absolute;
+  right: 16px;
+  bottom: 1px;
+}
+
+.fixed-action-btn {
+  bottom: 105px;
 }
