--- a/app/views/references/index.html.erb
+++ b/app/views/references/index.html.erb
@@ -1,23 +1,21 @@
 <%= render 'partials/sidebar_dashboard' %>
 <section class="main container">
-<div class="row">
-  <div class="col m12">
-    <div class="row">
-      <div class="col m8 offset-m1">
-        <h1 class="inline">References</h1>
-        <%= link_to new_reference_path, class: 'btn-floating btn-large waves-effect waves-light red tooltipped',
-          id: 'new-reference-btn', "data-position": "left", "data-delay": "50", "data-tooltip": "Add new reference" do %>
-          <i class="material-icons">add</i>
-        <% end %>
-        <table id="references-table">
-          <thead>
-            <th data-field="name">Name</th>
-            <th data-field="email">Email</th>
-          </thead>
-          <tbody>
+  <div class="row">
+    <div class="col m12">
+      <div class="row">
+        <div class="col m8 offset-m1">
+          <ul class="collection with-header">
+            <li class="collection-header"><h4>My References</h4></li>
             <%= render @references %>
-          </tbody>
-        </table>
+          </ul>
+        </div>
+        <div class="col m3">
+          <div class="fixed-action-btn">
+            <%= link_to new_reference_path, class: 'btn-floating btn-large waves-effect waves-light red tooltipped',
+              id: 'new-reference-btn', "data-position": "left", "data-delay": "50", "data-tooltip": "add a reference" do %>
+              <i class="material-icons">add</i>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
