--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,11 @@
+<% if flash.present?  %>
+  <% flash.each do | name | %>
+    <div class="flash-mail">
+      <i class="material-icons close-flash">close</i>
+      <p><%= name.last %></p>
+    </div>
+  <% end %>
+<% end %>
 <%= render 'partials/sidebar_dashboard' %>
 <section class="main container">
   <div class="row">
